Add month summary for contracts
